# CV_CornerDetection

./: CMakeLists.txt  README.md  Readme.md  main.cpp
Documentation/Word Version/: Task3.docx
include/: SIFT.h  Tree.h  greyscale.h  harris.h
include/GUI/: GUI.h
include/matching/: NCC.h  SSD.h
python/: SIFT.py
res/: task3_gui.glade  task3_gui.glade~
src/: SIFT.cpp  Tree.cpp  greyscale.cpp  harris.cpp
src/GUI/: GUI_init.cpp  GUI_signals.cpp
src/matching/: NCC.cpp  SSD.cpp
